--- a/Lesson_4_Utkin/app/src/main/res/layout/item_recycler_service.xml
+++ b/Lesson_4_Utkin/app/src/main/res/layout/item_recycler_service.xml
@@ -3,10 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
+    android:background="?attr/selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    android:clickable="false"
     android:orientation="vertical"
     app:cardCornerRadius="2dp"
     app:cardElevation="2dp"
