--- a/Lesson_8_Utkin/app/src/main/res/layout/activity_main.xml
+++ b/Lesson_8_Utkin/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,24 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewNotes"
+        app:layout_constraintEnd_toEndOf="@+id/recyclerViewNotes"
+        app:layout_constraintStart_toStartOf="@+id/recyclerViewNotes"
+        app:layout_constraintTop_toTopOf="@+id/recyclerViewNotes" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewNotes"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appbar" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="56dp"
